--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
@@ -32,7 +32,7 @@ jobs:
           path: dist/
 
   npm-publish-canary:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     needs: [build]
     permissions:
       contents: read
@@ -58,7 +58,7 @@ jobs:
       - run: npm publish --no-git-checks --tag canary
 
   npm-publish:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     needs: [build]
     permissions:
       contents: read
